<resources>
    <string name="app_name">Calculator</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="pow">^</string>
    <string name="exp">e</string>
    <string name="PI">π</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="openP">(</string>
    <string name="closeP">)</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="err">Error</string>
    <string name="toolbar_steps">Step-by-Step Solution</string>
    <string name="back">Back</string>
    <string name="my_node">Node</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculator</string>
    <string name="nav_header_subtitle">AliSK</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Calculator</string>
    <string name="menu_steps">Step-by-Step Solution</string>
    <string name="menu_tree">Expression Tree</string>
    <string name="dark">Dark Theme</string>
    <string name="toolbar_tree">Expression Tree</string>

</resources>