<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_calc"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/ic_solution"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_tree"
            android:icon="@drawable/ic_binary_tree"
            android:title="@string/menu_tree" />
    </group>

    <item android:id="@+id/nav_dark_switch"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        android:title="@string/dark"
        android:icon="@drawable/ic_moon"/>
</menu>