<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark1"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnCos"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/cos"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseP"
        app:layout_constraintEnd_toStartOf="@+id/btnTan"
        app:layout_constraintStart_toEndOf="@+id/btnSin" />

    <Button
        android:id="@+id/btnCloseP"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/closeP"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnPow"
        app:layout_constraintStart_toEndOf="@+id/btnOpenP" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/tan"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnPow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCos" />

    <Button
        android:id="@+id/btnOpenP"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/openP"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnCloseP"
        app:layout_constraintStart_toEndOf="@+id/btnPI" />

    <Button
        android:id="@+id/btnPI"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/PI"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btnOpenP"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/sin"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnOpenP"
        app:layout_constraintEnd_toStartOf="@+id/btnCos"
        app:layout_constraintStart_toEndOf="@+id/btnAC" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"
        android:background="@null"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:textSize="22sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnCos"
        app:layout_constraintEnd_toStartOf="@+id/btnDel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/btnAC"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#A60027"
        android:text="@string/ac"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnPI"
        app:layout_constraintEnd_toStartOf="@+id/btnSin"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnDel"
        android:layout_width="84dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/dark1"
        android:text="@string/del"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnTan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/result" />

    <Button
        android:id="@+id/btnPow"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/pow"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCloseP" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_8"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/div"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnMult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_6"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btnMult"
        app:layout_constraintStart_toEndOf="@+id/btn5" />


    <Button
        android:id="@+id/btnMult"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/mult"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_1"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_2"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/sub"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3" />


    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/dot"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintStart_toEndOf="@+id/btnDot" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/dark2"
        android:text="@string/equal"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSum"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/sum"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEqual" />


</androidx.constraintlayout.widget.ConstraintLayout>